# AudiOrg-1.1

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS_CATALOG.md  ANALISE_PROJETO.md  ARCHITECTURE.md  ATUALIZADO_SCORE_9.0.md  CLAUDE.md  CONTRIBUTING.md  DECISAO_AGENTES_LIMPEZA.md  IMPLEMENTATION_SUMMARY.md  LICENSE  ONBOARDING.md  README.md  RELATORIO_AGENTES_E_TECNOLOGIAS.md  RELATORIO_FINAL_CONSOLIDADO.md  RELATORIO_MAPEAMENTO.md  RELATORIO_MAPEAMENTO_CLAUDE.md  SCORE_SAUDE_PROJETO.md  SECURITY.md  SUMARIO_EXECUTIVO.txt  alembic.ini  auditoria_final.py  auditoria_parser_simples.py  auditoria_parser_v2.py  auditoria_simples.py  docker-compose.yml  gerar_laudo_pdf_engine_v2.py  gerar_laudo_pdf_engine_v3.py  parser_nfa_regex.py  parser_nfa_tocantins.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup_pr3.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  frontend-pages.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_agent_results.py  002_audit_results_and_pdf_hash.py  002_ledger_entries.py  003_claude_stats.py  003_ledger_entries.py  004_claude_stats.py
api/: dependencies.py  main.py
api/auth/: blacklist.py  revocation_store.py  security.py
api/middleware/: body_size_limit.py  claude_metrics.py  error_metrics.py  prometheus.py  rate_limit.py  security_headers.py  sentry.py
api/observability/: __init__.py  metrics_registry.py  orgaudi_metrics.py  sentry_init.py
api/routes/: agente.py  auditoria.py  auth.py  batch.py  chat.py  clientes.py  finance.py  metrics.py  nfa_ai_parser.py  prometheus.py
api/schemas/: __init__.py  auditoria.py  clientes.py  cruzamento.py  laudos.py  usuarios.py
api/services/: auditoria.py  auditoria_bigfour.py  auditoria_bigfour_adapter.py  auditoria_cruzada.py  auditoria_cruzada_pdf.py  auditoria_nfae.py  auditoria_tasks.py  ruff.toml
data/: funrural_aliquotas.yaml
docs/: DEVELOPMENT.md  MAPEAMENTO_E_APRIMORAMENTO_v8.md  MELHORIAS_HORIZON_NFA_PDF.md  P3A_UNIFICAR_AI_CLIENT.md  SUPABASE.md  SUPABASE_MIGRATION_STATUS.md
docs/schemas/: auditoria_cruzada.json  auditoria_cruzada_v2.json
frontend/frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
horizon_blue_one/agents/: __init__.py  a00_ceo.py  a01_junior.py  a02_protetor.py  a03_zerotrust.py  a06_extrator.py  a07_auditoria_assurance.py  a08_auditor_nfa.py  a09_auditor_ti.py  a10_auditor_patrimonio.py  a11_planejador_tributario.py  a12_descobridor_deducoes.py  a14_avaliador_risco.py  a16_lgpd.py  a17_previsor_caixa.py  a22_auditor_itr.py  (+18 more)
k8s/: README.md
pdf_engine/: MAPEAMENTO_UNIFICACAO.md  README.md  __init__.py  excel_export.py  ir_report.py  pdf_report.py
reports_nfa/: EMAIL_warmove6_2026-05-10.txt  RELATORIO_TOKENS_2026-05-09.md  RELATORIO_TOKENS_2026-05-10.md  llm_alto_risco_1778355246.json  llm_alto_risco_1778417629.json  llm_alto_risco_1778418321.json  lote_completo_1778420150.json  lote_completo_1778491973.json
scripts/: _forense_helper.py  analise_anomalias_18.py  analise_forense_completa.py  analise_fragmentacao_t02.py  analise_nfe_gado.py  archive_agents.sh  auditar_lote_completo_pdf.py  auditoria_adela.py  auditoria_completa_nfe_gado.py  auditoria_full_horizon.py  cleanup_runtime_outputs.sh  gerar_carteira.py  gerar_laudo_sem_objeto.py  gerar_laudos.py  gerar_modelos_schema.py  gerar_relatorio_carteira.py  gerar_relatorio_fragmentacao.py  install_git_hooks.py  lint_core_strict.py  migrar_call_otimizado.py  migrar_clientes_gief_only.py  modelo_pdf_demo.py  parser_deusdete_to.py  parser_gief_mensal.py  reauditar_genis.py  restaurar_compras_gief.py  restaurar_mensais.py  seed_admin.py  setup_supabase_secret.sh  simulacao_consumo_real.py  simulacao_mix_modelos.py  teste_nfe_gado.py  teste_nfe_gado_re1.py  teste_orchestrator.py  update_supabase_env.py
supabase/: check_schema.py
tests/: conftest.py  test_a_token.py  test_agents_deterministic.py  test_agents_s_extra.py  test_aliquotas_loader.py  test_anomalias_catalogo.py  test_anomalias_resumo.py  test_api_e2e.py  test_api_routes_extra.py  test_audit_result_repo.py  test_auditoria_auth.py  test_auth.py  test_auth_revoke.py  test_base_agent_e_ledger.py  test_base_agent_llm.py  test_blacklist_e_csp.py  test_calibracao.py  test_chat_endpoint.py  test_claude_batch.py  test_claude_metrics.py  test_claude_stats_writer.py  test_coverage_gaps.py  test_database_engine.py  test_detectores_forenses.py  test_ledger.py  test_lstm_scorer.py  test_main_extra.py  test_mcp_bridge.py  test_mcp_bridge_extra.py  test_model_adapter.py  test_nfa_bridge.py  test_nfa_parser_cache.py  test_orchestrator.py  test_orgaudi_metrics.py  test_pdf_hash.py  test_precalc.py  test_precalc_f3.py  test_precalc_isolamento.py  test_precalc_isolation.py  test_privacy.py  (+18 more)
(+267 files in other folders)
