# OrgAudi Sovereign — pyproject.toml
# This file consolidates tool configuration (ruff, black, mypy, pytest, bandit, coverage).
# Runtime dependencies stay in requirements.txt for backward compatibility with deploy scripts.
# Dev dependencies are listed in requirements-dev.txt.

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orgaudi-sovereign"
version = "8.0.0"
description = "OrgAudi Sovereign — Plataforma de Auditoria Fiscal de NFA-e"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "ORGATEC IA" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

# Runtime deps mirrored from requirements.txt (kept for tooling that reads pyproject)
# The single source of truth remains requirements.txt to avoid drift in deploys.

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "black>=24.8.0",
  "mypy>=1.11.2",
  "bandit[toml]>=1.7.10",
  "pre-commit>=3.8.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest-xdist>=3.6.0",
  "httpx>=0.27.0",
  "faker>=29.0.0",
  "types-requests>=2.32.0",
  "types-PyYAML>=6.0.12",
  "types-python-dateutil>=2.9.0",
]

[project.urls]
Repository = "https://github.com/orgateccloud-bot/AudiOrg-1.1"

# ────────────────────────────────────────────────────────────────────────────
# Ruff — linting + import sort (replaces isort, flake8, pyupgrade)
# ────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "alembic/versions",
  "out",
  "reports_nfa",
  "frontend",
  "*.ipynb",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "S",    # bandit (security)
  "RUF",  # ruff-specific
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "S101",  # use of assert (ok in tests)
  "B008",  # function call in default arg (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "B"]
"alembic/**/*.py" = ["E", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ────────────────────────────────────────────────────────────────────────────
# Black — code formatter (fallback if not using ruff format)
# ────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
extend-exclude = "alembic/versions|out|reports_nfa|frontend"

# ────────────────────────────────────────────────────────────────────────────
# Mypy — static typing
# ────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
warn_return_any = false
warn_unused_ignores = true
exclude = ["alembic/versions", "tests", "out", "reports_nfa"]

# ────────────────────────────────────────────────────────────────────────────
# Pytest
# ────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: integration tests requiring external services",
  "unit: pure unit tests",
]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning:passlib.*",
]

# ────────────────────────────────────────────────────────────────────────────
# Coverage
# ────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["api", "horizon_blue_one", "nfa_extractor", "pdf_engine"]
omit = [
  "*/tests/*",
  "*/alembic/versions/*",
  "*/_legacy/*",
  "*/_archived/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
show_missing = true
precision = 2

# ────────────────────────────────────────────────────────────────────────────
# Bandit — security linter
# ────────────────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "alembic", "out", "reports_nfa", "frontend"]
skips = ["B101"]  # assert_used — ok em testes
